force-app/main/default/objects/AI_Recommendation__c/AI_Recommendation__c.object-meta.xml
<CustomObject>
    <description>AI-generated guest recommendation. Upserted by GuestAIOrchestrator.saveRecommendation().</description>
    <label>AI Recommendation</label>
    <nameField>
        <label>Recommendation Name</label>
        <type>AutoNumber</type>
        <displayFormat>REC-{000000}</displayFormat>
    </nameField>
    <pluralLabel>AI Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>