force-app/main/default/objects/AI_Recommendation__c/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <description>Model confidence: 0.0–1.0</description>
    <label>Confidence Level</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>