force-app/main/default/objects/AI_Recommendation__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Unique trace ID: AURA-AI-{ts}-{hex}. Used for request tracing.</description>
    <label>Correlation ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>