force-app/main/default/objects/AI_Recommendation__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <description>Projected revenue from this offer in USD.</description>
    <label>Estimated Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>