force-app/main/default/objects/AI_Recommendation__c/fields/Fallback_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a fallback provider was used.</description>
    <label>Fallback Triggered</label>
    <type>Checkbox</type>
</CustomField>