force-app/main/default/objects/AI_Recommendation__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <description>Timestamp when the recommendation was generated.</description>
    <label>Generated At</label>
    <type>DateTime</type>
</CustomField>