force-app/main/default/objects/AI_Recommendation__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact of the guest this recommendation was generated for.</description>
    <label>Guest</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AI Recommendations</relationshipLabel>
    <relationshipName>AI_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>