force-app/main/default/objects/AI_Recommendation__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <description>Model version: gpt-4-turbo, gemini-1.5-pro, etc.</description>
    <label>Model Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>