force-app/main/default/objects/AI_Recommendation__c/fields/Offer_Description__c.field-meta.xml
<CustomField>
    <fullName>Offer_Description__c</fullName>
    <description>Detailed personalised offer text.</description>
    <label>Offer Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>