force-app/main/default/objects/AI_Recommendation__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <description>Category: Spa, Dining, Room Upgrade, General.</description>
    <label>Offer Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>