force-app/main/default/objects/AI_Recommendation__c/fields/Propensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Propensity_Score__c</fullName>
    <description>Conversion likelihood: 0.0–100.0</description>
    <label>Propensity Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>