force-app/main/default/objects/AI_Recommendation__c/fields/Provider_Used__c.field-meta.xml
<CustomField>
    <fullName>Provider_Used__c</fullName>
    <description>AI provider that generated this recommendation.</description>
    <label>Provider Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>